--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,14 @@ h1 {
 .button.clear:hover {
     background-color: #87cefa; /* Azul más oscuro al pasar el mouse */
 }
+@media screen and (max-width: 1024px) {
+    .card {
+        width: calc(50% - 40px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: calc(100% - 40px);
+    }
+}
